Updated ubiquo_core guide title [#8 state:resolved]

--- a/guides/source/ubiquo_core.textile
+++ b/guides/source/ubiquo_core.textile
@@ -1,4 +1,4 @@
-h2. Ubiquo Access Control
+h2. Ubiquo Core
 
 This plugin contains the basic common Ubiquo structure so that other
 plugins can be built on top of it. This includes:
