--- a/guides/source/index.erb.textile
+++ b/guides/source/index.erb.textile
@@ -38,6 +38,10 @@ h3. Plugins
   This guide covers the ubiquo_authentication plugin, that gives you the capability to add Users to the application.
 <% end %>
 
+<% guide("Ubiquo Categories", 'ubiquo_categories.html') do %>
+  This guide covers the ubiquo_categories plugin, that provides a simple mechanism for organize and categorize the content of your website, adding a generic category system for your models and forms.
+<% end %>
+
 <% guide("Ubiquo Core", 'ubiquo_core.html') do %>
   This guide covers the ubiquo_core plugin, that provides the basic common Ubiquo structure so that other plugins can be built on top of it.
 <% end %>
