--- a/guides/source/index.erb.textile
+++ b/guides/source/index.erb.textile
@@ -1,6 +1,9 @@
 <% content_for :header_section do %>
 h2. Ubiquo guides
 
+These are Edge Guides, based on the current master <a href="http://github.com/gnuine/ubiquo_core/tree/master">branch</a>.
+
+If you are looking for the ones for the stable version please check <a href="07stable">0.7stable guides</a>instead. 
 These guides are designed to make you immediately productive with Ubiquo, and to help you understand how all of the pieces fit together.
 
 <% end %>
