--- a/guides/source/index.erb.textile
+++ b/guides/source/index.erb.textile
@@ -1,7 +1,10 @@
 <% content_for :header_section do %>
 h2. Ubiquo guides
 
-These guides are designed to make you immediately productive with Ubiquo, and to help you understand how all of the pieces fit together.
+These guides are designed to make you immediately productive with Ubiquo, and to help you understand how all of the pieces fit together. There are two different versions of the Guides site, and you should be sure to use the one that applies to your situation:
+
+* <a href="0.7-stable">Current Release version</a> – based on Ubiquo 0.7
+* <a href="edge">Edge version</a> – based on the current Ubiquo master branch
 
 <% end %>
 
